src/main/webapp/imcms/css/admin/imcms-super-admin.css
@import url("../imcms-info-page.css");

* {
    font-family: 'Source Sans Pro', sans-serif;
}

.imcms-info-page {
    margin: 0;
    left: 15%;
    width: 70%;
    top: 2%;
}

@media screen and (max-width: 1600px) {
    .imcms-info-page {
        left: 12%;
        width: 76%;
    }
}

@media screen and (max-width: 1400px) {
    .imcms-info-page {
        left: 7%;
        width: 86%;
    }
}

@media screen and (max-width: 1200px) {
    .imcms-info-page {
        left: 1%;
        width: 98%;
    }
}

.imcms-head__exit {
    position: absolute;
    top: 13px;
    right: 20px;
}

.imcms-pop-up-super-admin-modal {
    height: 96%;
}

.category-admin .imcms-buttons,
.roles-editor .imcms-buttons,
.rules-editor .imcms-buttons,
.group-editor .imcms-buttons,
.profiles-editor .imcms-buttons {
    display: flex;
    justify-content: flex-end;
}

.category-admin .imcms-buttons *:nth-child(2),
.roles-editor__role-view-buttons *:nth-child(2),
.group-editor__default-buttons *:nth-child(2) {
    margin-left: auto;
}

.imcms-search-row > * {
    width: 25%;
    display: inline-block;
    padding-right: 15px;
    min-width: 180px;
}

.imcms-search-row > :first-child {
    padding-left: 0;
}

.imcms-pop-up-super-admin-modal__right-side {
    width: 80%;
    padding: 30px 60px;
    height: calc(95% - 43px);
}

.imcms-pop-up-super-admin-modal__footer {
    height: 5%;
    width: 80%;
    padding: 0 60px;
}

@media screen and (max-width: 1040px){
    .imcms-pop-up-super-admin-modal__right-side {
        width: 80%;
        padding: 20px 30px;
    }

    .imcms-pop-up-super-admin-modal__footer{
        width: 80%;
        padding: 0 30px;
    }
}

@media screen and (max-width: 900px){
    .imcms-pop-up-super-admin-modal__right-side {
        width: 80%;
        padding: 20px 20px;
    }

    .imcms-pop-up-super-admin-modal__footer{
        width: 80%;
        padding: 0 20px;
    }
}

@media screen and (max-width: 800px){
    .imcms-pop-up-super-admin-modal__right-side {
        width: 82%;
        padding: 10px 10px;
    }

    .imcms-pop-up-super-admin-modal__footer{
        width: 82%;
        padding: 0 10px;
    }
}

@media screen and (max-width: 700px){
    .imcms-pop-up-super-admin-modal__right-side {
        width: 85%;
        padding: 10px 10px;
    }

    .imcms-pop-up-super-admin-modal__footer{
        width: 85%;
        padding: 0 10px;
    }
}

.imcms-search-row__users-list-button{
    margin-top: 10px;
}

.imcms-search-row__users-list-button .imcms-button {
    float: none;
    white-space: nowrap;
}

.imcms-search-row__users-activity-filter label {
    margin: 0;
}

.imcms-search-row__users-activity-filter {
    margin-bottom: 10px !important;
    min-width: 185px;
}

.imcms-form__field .imcms-user-title-row.imcms-title {
    margin-bottom: 0;
}

.imcms-user-info-row,
.imcms-user-title-row {
    padding: 2px;
    border-bottom: solid 1px #dad5d5;
}

.imcms-user-info-row__user-id,
.imcms-user-title-row__user-id{
    padding: 5px;
}

.imcms-user-info-row__last-name,
.imcms-user-info-row__first-name,
.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__last-name,
.imcms-user-title-row__first-name,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    padding: 5px;
    word-break: break-word;
    text-overflow:ellipsis;
    white-space: nowrap;
    overflow: hidden;
    vertical-align: bottom;
}

@media screen and (min-width: 840px){
    .imcms-user-info-row .imcms-control {
        margin: 5px;
    }
}

.imcms-user-info-row__user-id,
.imcms-user-title-row__user-id {
    width: 5%;
}

.imcms-user-info-row__first-name,
.imcms-user-title-row__first-name {
    width: 13%;
}

.imcms-user-info-row__last-name,
.imcms-user-title-row__last-name {
    width: 18%;
}

.imcms-user-info-row__user-name,
.imcms-user-info-row__email,
.imcms-user-title-row__user-name,
.imcms-user-title-row__email {
    width: 27%;
}

.imcms-user-info-row > *,
.imcms-user-title-row > * {
    display: inline-block;
}

.imcms-user-info-row__archive {
    background-size: contain;
    width: 21px;
    height: 21px;
    font-size: 14px;
}

.imcms-users-search-result {
    height: 600px;
    overflow-y: auto;
    background-color: #ececec;
    border: solid 1px #d1d2c6;
}

.imcms-pop-up-super-admin-modal__left-side {
    max-width: none;
    width: 20%;
}

.imcms-pop-up-super-admin-modal__left-side .imcms-tabs__advanced-button--enabled{
    background-color: #ebeef1e0;
    -webkit-box-shadow: inset 0 0 10px #c1c1c180;
    -moz-box-shadow: inset 0 0 10px #c1c1c180;
    box-shadow: inset 0 0 10px #c1c1c180;
}

@media screen and (max-width: 800px){
    .imcms-pop-up-super-admin-modal__left-side {
        width: 18%;
    }

    .imcms-pop-up-super-admin-modal__left-side .imcms-tabs .imcms-title{
        padding: 27px 25px;
    }
}

@media screen and (max-width: 700px){
    .imcms-pop-up-super-admin-modal__left-side {
        width: 15%;
    }

    .imcms-pop-up-super-admin-modal__left-side .imcms-tabs .imcms-title{
        padding: 27px 15px;

    }
}

.imcms-user-info-row--archived {
    background-color: lightgray;
}

.imcms-drop-down-list__item .imcms-label {
    margin-bottom: 0;
}

.roles-table {
    width: 40%;
    max-height: 400px;
    overflow-y: auto;
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-block;
	overflow-wrap: anywhere;
}

.roles-table__role-row {
    padding: 5px;
    cursor: pointer;
}

.roles-table__role-row:hover {
    background-color: #dfedff;
}

.roles-table__role-row.roles-table__role-row--active {
    background-color: #c3d9f5;
}

.roles-editor {
    width: 50%;
    margin-left: 2%;
    vertical-align: top;
}

.versions-container {
    background-color: ghostwhite;
    border: 1px solid gainsboro;
    display: inline-flex;
    width: 80%;
}

@media screen and (max-width: 1000px){
    .versions-container {
        width: 90%;
    }
}
/* ... */

